# cmake_less

books/: chap1.txt  chap2.txt
projects/add_compile_options/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  prog
projects/add_custom_command/add_custom_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/add_custom_command/add_custom_lib/lib/: Makefile  cmake_install.cmake
projects/add_custom_command/add_custom_lib/lib/src/: l.cpp
projects/add_custom_command/add_custom_lib/prog/: cmake_install.cmake  main.cpp
projects/add_custom_target/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/add_definitions/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  prog
projects/add_executable/: CMakeCache.txt  CMakelists.txt  Makefile  cmake_install.cmake  p.cpp  prog  t.cpp
projects/add_library/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  l1.cpp
projects/add_subdirectory/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/add_testing/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
projects/build10/: CMakeCache.txt  CMakeLists.txt  Makefile  build.cmake  cmake_install.cmake
projects/build11/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/build12/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/build13/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex-find-h
projects/build13/src/: main.cpp  source.cpp
projects/build14/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/build14/lib_src/: CMakeLists.txt  Makefile  cmake_install.cmake
projects/build14/lib_src/include/: l.h
projects/build14/lib_src/src/: l.cpp
projects/build14/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  prog
projects/build15/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  ex-version  ex-version.cpp
projects/build16/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
projects/build17/: CMakeCache.txt  CmakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
projects/build18/: CMakeCache.txt  CmakeLists.txt  Makefile  cmake_install.cmake  wq
projects/build19/my_lib2/: CMakeLists.txt  g.cpp  g.h
projects/build19/my_prog/: CMakeLists.txt  main.cpp
projects/build20/: 7zip.cmake  CMakeLists.txt  main.cpp
projects/build21/: CMakeCache.txt  CMakeLists.txt  Makefile  character.xml  cmake_install.cmake  event.cpp
projects/build3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/build4/: CMakeLists.txt
projects/build6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/build7/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/build8/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/build9/: CMakeLists.txt
projects/build9/lib_src/: CMakeLists.txt  a.cpp
projects/build9/src/: CMakeLists.txt  main.cpp
projects/configure_file/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.in  prog  t.cpp  t.i  t1.cpp
projects/find_file/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/foreach_endforeach/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/function_endfunction_return/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/generator_expressions/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  prog
projects/generator_expressions/bool_expr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/generator_expressions/conversion_expr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
projects/generator_expressions/info_expr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
projects/get_filename_component/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/get_propety_set_property/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
projects/if_elseif_else_endif/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/include_directories/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/interface/: CMakeLists.txt
(+235 files in other folders)
