cmake_minimum_required(VERSION 3.10)
project(test)
set(BINARY_DIR "${CMAKE_BINARY_DIR}")
find_path(HEAD_LIB_PATH l.h PATHS "${BINARY_DIR}/lib_src" PATH_SUFFIXES /include)
find_path(SRC_LIB_PATH  l.cpp PATHS "${BINARY_DIR}/lib_src" PATH_SUFFIXES /src)
find_path(SRC main.cpp PATHS "${BINARY_DIR}/src")
if(EXISTS "${SRC_LIB_PATH}" AND EXISTS "${HEAD_LIB_PATH}" AND EXISTS "${SRC}")
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${BINARY_DIR}/lib")
	if(WIN32)
		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BINARY_DIR}/bin")
	elseif(UNIX)
		set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BINARY_DIR}/lib")
	endif()
	add_subdirectory(lib_src)
	add_subdirectory(src)
else()
	message("library resources not found")
endif()


